# share

./: .gitignore
agda/: .gitignore
agda/issues/: agda-mode-ctrl-comma.txt
agda/plfa-practice/: induction-ab.agda
agda/src/ModuloNat/: README  SigmaMod.agda  SigmaModGroupProperties.agda  UtilProperties.agda  build.sh
agda/src/SkeletalModuloNat/: README  SigmaMod.agda  SigmaModGroupProperties.agda  UtilProperties.agda
haskell/: stack.yaml
haskell/monadblender/: LICENSE  monadblender.cabal  run.sh
haskell/monadblender/app/: .gitignore  MonadBlender.hs  MonadBlenderCheck.hs  MonadBlenderSample.hs  gendoc.sh
haskell/monadblender/hdoc/: MonadBlender.html  doc-index.html  index-frames.html  index.html  mini_MonadBlender.html
haskell/transformer/: BasicEvaluator.hs  EnvironmentDependentEvaluator.hs  EvaluatorTypes.hs  GracefulEvaluator.hs  IOEvaluator.hs  LoggingEvaluator.hs  MonadicEvaluator.js  ProfilingEvaluator.hs  README.md  run.sh
idris/: .gitignore
idris/modulo/: Group.idr  ModData.idr  ModFin.idr  ModFinMeetup.idr  ModularNat.idr  README
rust/listserver/: .env  .env.test  .gitignore  Cargo.toml  README.md  build.sh  diesel-notes.md  diesel-setup.sh  diesel.toml  dropdb.sh  install-diesel-cli.sh  run-migration.sh  run.sh  setup-migration.sh  test.sh  todo  usenightly.sh
rust/listserver/migrations/2020-04-09-204608_listserver/: down.sql  up.sql
rust/listserver/src/: base.rs  dbbase.rs  jsonlist.rs  lib.rs  main.rs  rocketeer.rs
rust/listserver/src/base/: base.rs
rust/listserver/src/rocketeer/: db.rs  rocketeer.rs  service.rs
rust/listserver/src/rocketeer/db/: listdao.rs  models.rs  schema.rs
rust/listserver/src/rocketeer/service/: list_service.rs  list_service_db.rs  list_service_in_memory.rs  list_service_sqlite.rs
rust/listserver/src/service/: list_service.rs  list_service_in_memory.rs  list_service_sqlite.rs  mod.rs
rust/listserver/tests/: listserver_test.rs  service_test.rs
science/reflections/: standards.txt
science/what-is-this-thing-called-science/: README  chalmers-1.txt  chalmers-10-11.txt  chalmers-12.txt  chalmers-13.txt  chalmers-14-15.txt  chalmers-17.txt  chalmers-2.txt  chalmers-3.txt  chalmers-4.txt  chalmers-5.txt  chalmers-6.txt  chalmers-7.txt  chalmers-8.txt  chalmers-9.txt  summary-arguments-from-coincidence.txt  summary-categories-of-theories.txt
science/why-trust-science/: about-diversity.txt  chapter2-conclusions.txt  chapter2.txt  chapter3.txt  chapter5.txt  chapter6.txt
(+7 files in other folders)
