[package]
name = "listserver"
version = "0.1.0"
authors = ["Azad Bolour <azadbolour@bolour.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Need nightly build of Rust for rocket.
[dependencies]
rocket = "0.4.4"

# actix-web = "2.0"
# actix-rt = "1.0.0"
# actix-rocketeer.service = "1.0.0"

# bytes = "0.5.2"
# futures = "0.3.1"
# env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
