[package]
name = "listserver"
version = "0.1.0"
authors = ["Azad Bolour <azadbolour@bolour.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Need nightly build of Rust for rocket.
[dependencies]
rocket = "0.4.4"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
diesel = { version = "1.4.4", features = ["sqlite", "postgres", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
